<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.company.mydiet.RegisterActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/table_margin"
        android:padding="@dimen/table_padding"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:id="@+id/textView3"
                style="@style/tableColumnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edit_user_name"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView11"
                style="@style/tableColumnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight" />

            <EditText
                android:id="@+id/edit_user_weight"
                style="@style/editTextStyle.numberDecimalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView5"
                style="@style/tableColumnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height" />

            <EditText
                android:id="@+id/edit_user_height"
                style="@style/editTextStyle.numberDecimalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView6"
                style="@style/tableColumnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waist" />

            <EditText
                android:id="@+id/edit_user_waist"
                style="@style/editTextStyle.numberDecimalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView7"
                style="@style/tableColumnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <EditText
                android:id="@+id/edit_user_age"
                style="@style/editTextStyle.numberStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <Button
                android:background="@color/buttonColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="20dp"
                android:layout_span="2"
                android:onClick="updateUserInfoBtnClicked"
                android:text="@string/update" />
        </TableRow>
    </TableLayout>
</LinearLayout>
